Change message-all module so classes from all FIX specs are re-generated and re-compiled before making the jar